formulario y menu de seleccion creeados.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">PlantDiary</string>
+    <string-array name="opciones_agua">
+        <item>Mucha</item>
+        <item>Media</item>
+        <item>Poca</item>
+    </string-array>
+
 </resources>
